--- a/package.json
+++ b/package.json
@@ -107,11 +107,11 @@
         "never"
       ],
       "arrow-parens": [
-        "error",
-        "always"
+        "warn",
+        "as-needed"
       ],
       "arrow-body-style": [
-        2,
+        "warn",
         "as-needed"
       ],
       "comma-dangle": ["error", {
@@ -149,7 +149,9 @@
       "no-use-before-define": 0,
       "prefer-template": 2,
       "class-methods-use-this": 0,
+      "react/prop-types": 0,
       "react/forbid-prop-types": 0,
+      "jsx-a11y/no-static-element-interactions": 1,
       "react/jsx-first-prop-new-line": [
         2,
         "multiline"
