-refactored mixins to return js objects (JSON) -added mixin for button uses a dash-case key as proof of concept

--- a/package.json
+++ b/package.json
@@ -113,7 +113,8 @@
       ],
       "arrow-body-style": [
         "warn",
-        "as-needed"
+        "as-needed",
+        { "requireReturnForObjectLiteral": true }
       ],
       "comma-dangle": [
         "error",
